# ChangeLog for media-tv/mythtv
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.291 2009/11/10 15:24:03 cardoe Exp $

  10 Nov 2009; Doug Goldstein <cardoe@gentoo.org> mythtv-0.22_p22778.ebuild:
  comment out setting CFLAGS and CXXFLAGS to "" for bug #279944

*mythtv-0.23_alpha22784 (10 Nov 2009)

  10 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-0.23_alpha22784.ebuild:
  add a trunk ebuild for bleeding edge users

*mythtv-0.22_p22778 (10 Nov 2009)

  10 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-0.22_p22778.ebuild:
  fix crash when metallugy theme is used and you go to the program guide

  09 Nov 2009; Doug Goldstein <cardoe@gentoo.org> mythtv-0.22_p22764.ebuild,
  mythtv-0.22_p22772.ebuild:
  add some blockers against the themes packages to make the upgrade path
  smoother

  08 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-0.22_rc22588.ebuild, -mythtv-0.22_rc22679.ebuild:
  remove release candidate versions

*mythtv-0.22_p22772 (08 Nov 2009)

  08 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-0.22_p22772.ebuild:
  add newer 0.22 fixes to address issue when upgrading from 0.21 with a
  theme that's no longer in 0.22

*mythtv-0.22_p22764 (08 Nov 2009)

  08 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-0.22_p22764.ebuild:
  add 0.22 final + fixes version. blocks old mythcontrols due to file
  collisions

  02 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  mythtv-0.22_rc22679.ebuild:
  add support for pulseaudio. add warning about automagical dependencies

  31 Oct 2009; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-0.21_p18314-r1.ebuild, -mythtv-0.21_p18314-r2.ebuild,
  -mythtv-0.21_p19961-r1.ebuild, -mythtv-0.22_alpha20959.ebuild:
  drop old versions

*mythtv-0.22_rc22679 (31 Oct 2009)

  31 Oct 2009; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-0.22_rc22679.ebuild: